force-app/main/default/objects/Ward__c/Ward__c.object-meta.xml
<CustomObject>
    <label>Ward</label>
    <nameField>
        <displayFormat>ward-{0000}</displayFormat>
        <label>Ward Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>