force-app/main/default/objects/Ward__c/fields/Bed_Available__c.field-meta.xml
<CustomField>
    <fullName>Bed_Available__c</fullName>
    <label>Bed Available</label>
    <summaryForeignKey>Bed__c.Ward__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>