force-app/main/default/objects/Ward__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Hospital__c</referenceTo>
    <relationshipLabel>Wards</relationshipLabel>
    <relationshipName>Wards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>