force-app/main/default/objects/Ward__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Emergency</fullName>
                <default>true</default>
                <label>Emergency</label>
            </value>
            <value>
                <fullName>General Ward</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>Operation Theatre</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>