force-app/main/default/objects/Ward__c/fields/RoomStatus__c.field-meta.xml
<CustomField>
    <fullName>RoomStatus__c</fullName>
    <label>RoomStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Maintainance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>