force-app/main/default/objects/Ward__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Hospital__c</columns>
    <columns>RoomStatus__c</columns>
    <columns>Room_Type__c</columns>
    <columns>Bed_Available__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>